Sun Sep 15 17:38:20 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* VERSION.INFO: Updated for dsa 1.03 (gnat 3.08).
