@@ -19,12 +19,20 @@
 	  (beginning-of-line)
 	  (delete-region (point-min) (point))))
     (goto-char (point-min))
-    (if (re-search-forward "^package body \\(.*\\) is" nil t)
+    (if (re-search-forward "package body \\(.+\\) is" nil t)
 	(setq name (buffer-substring (match-beginning 1) (match-end 1)))
       (goto-char (point-min))
-      (re-search-forward "^package \\(.*\\) is")
-      (setq name (buffer-substring (match-beginning 1) (match-end 1)))
-      (setq spec t))
+      (if (re-search-forward "package \\(.+\\) is" nil t)
+	  (setq name (buffer-substring (match-beginning 1) (match-end 1))
+		spec t)
+	(goto-char (point-min))
+	(if (re-search-forward "^procedure \\([^ ;]+\\)" nil t)
+	    (setq name (buffer-substring (match-beginning 1) (match-end 1))
+		  spec (string-match "ads" (buffer-name)))
+	  (goto-char (point-min))
+	  (if (re-search-forward "^function \\([^ ;]+\\)" nil t)
+	      (setq name (buffer-substring (match-beginning 1) (match-end 1))
+		    spec (string-match "ads" (buffer-name)))))))
     (goto-char (point-min))
     (insert-file "header.txt")
     (goto-char (point-min))
@@ -36,7 +44,7 @@
     (insert (center-ada ""))
     (insert (center-ada (if spec "S p e c" "B o d y")))
     (insert (center-ada ""))
-    (insert (center-ada "$Revision$"))
+    (insert (center-ada (concat "$" "Revision: 1.99 $")))
     (re-search-forward "----------")
     (next-line 1)
     (let ((beg (point)))
@@ -59,4 +67,17 @@
 (defun spaces-ada (n)
   (if (<= n 0) ""
     (concat " " (spaces-ada (- n 1)))))
+
+(defun update-headers ()
+  "Update headers of files given on the command line"
+  (interactive)
+  (let ((l (directory-files "." nil "\\.ad." nil t)))
+    (while l
+      (let ((current (car l)))
+	(message "Updating %s..." current)
+	(find-file current)
+	(update-header)
+	(write-file current)
+	(message "Updating %s... done" current)
+	(setq l (cdr l))))))
 
